@@ -1,4 +1,7 @@
 2011-07-01 gabriel.oliveira
+* Refactor to only load UNG document list when necessary
+
+2011-07-01 gabriel.oliveira
 * Remove old way of overriding preference for text editors
 
 2011-07-01 gabriel.oliveira
